test/conformance/chainsaw/background-only/cluster-policy/not-rejected/01-policy.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policy
spec:
  apply:
  - file: policy.yaml
  assert:
  - file: policy-assert.yaml
